# thermodiff

./: .buildinfo  LICENSE  MANIFEST.in  README.md  aver.ipynb  diffplz.html  genindex.html  ideas.ipynb  ideas_buenas.ipynb  index.html  index_function.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  testing.ipynb  thermovars.html  tox.ini
.doctrees/: diffplz.doctree  environment.pickle  index.doctree  thermovars.doctree
.doctrees/core/: easy_sums.doctree  idxfunction.doctree  init.doctree  kronecker_handling.doctree
.doctrees/nbsphinx/tutorial/: getting_started.ipynb
.doctrees/tutorial/: getting_started.doctree  index.doctree  mhv.doctree  mole_fraction.doctree  uniquac.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/thermodiff/: diffplz.html
_modules/thermodiff/core/: easy_sums.html  (+2 more)
_sources/: diffplz.rst.txt  index.rst.txt  thermovars.rst.txt
_sources/core/: easy_sums.rst.txt  init.rst.txt  kronecker_handling.rst.txt
_sources/tutorial/: index.rst.txt  mole_fraction.ipynb.txt  uniquac.ipynb.txt
core/: easy_sums.html  idxfunction.html  init.html  kronecker_handling.html
docs/: requirements.txt
docs/source/: conf.py
tests/: test_dummy.py  test_mole_fraction.py  test_summation.py
thermodiff/: __init__.py  colab.py  constants.py  diffclass.py  diffplz.py  simplifyplz.py  thermovars.py
thermodiff/core/: __init__.py  easy_sums.py  idxfunction.py  kronecker_handling.py
tutorial/: getting_started.html  index.html  mhv.html  mole_fraction.html  uniquac.html  uniquac.ipynb
(+8 files in other folders)
